// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SIRI-SX Generator > correctly generates Disruptions CSV 1`] = `
"Organisation,ID,Validity start,Validity end,Publication start,Publication end,Reason,Planned,Modes affected,Operators affected,Services affected,Stops affected,Journeys affected
Test Org,acde070d-8c4c-4f0d-9d8a-162843c10333,2023-03-10T12:00:00.000Z,,2023-03-10T12:00:00.000Z,,staffInWrongPlace,true,bus;tram;rail,FSYO,1,,2"
`;

exports[`SIRI-SX Generator > correctly generates Disruptions JSON 1`] = `
[
  {
    "consequences": [
      {
        "consequenceOperators": [
          {
            "operatorNoc": "FSYO",
            "operatorPublicName": "Operator Name",
          },
        ],
        "consequenceType": "operatorWide",
        "description": "Some consequence description",
        "disruptionDelay": "40",
        "disruptionSeverity": "severe",
        "removeFromJourneyPlanners": "yes",
        "vehicleMode": "bus",
      },
      {
        "consequenceType": "networkWide",
        "description": "Some consequence description",
        "disruptionArea": [
          "082",
          "002",
        ],
        "disruptionSeverity": "slight",
        "removeFromJourneyPlanners": "no",
        "vehicleMode": "tram",
      },
      {
        "consequenceType": "services",
        "description": "Service test",
        "disruptionDirection": "allDirections",
        "disruptionSeverity": "severe",
        "removeFromJourneyPlanners": "yes",
        "services": [
          {
            "dataSource": "tnds",
            "destination": "Dest",
            "endDate": null,
            "id": 123,
            "lineId": "SL1",
            "lineName": "Line",
            "nocCode": "NOC",
            "operatorShortName": "Test",
            "origin": "Origin",
            "serviceCode": "1234",
            "startDate": "2023-08-10",
          },
        ],
        "vehicleMode": "rail",
      },
      {
        "consequenceType": "journeys",
        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
        "disruptionDelay": "45",
        "disruptionSeverity": "unknown",
        "journeys": [
          {
            "dataSource": "tnds",
            "departureTime": "17:30:00",
            "destination": "Liverpool Sir Thomas Street",
            "direction": "outbound",
            "journeyCode": null,
            "origin": "Chester Bus Interchange",
            "vehicleJourneyCode": "VJ24",
          },
          {
            "dataSource": "tnds",
            "departureTime": "18:00:00",
            "destination": "Liverpool Sir Thomas Street",
            "direction": "outbound",
            "journeyCode": null,
            "origin": "Chester Bus Interchange",
            "vehicleJourneyCode": "VJ25",
          },
        ],
        "removeFromJourneyPlanners": "no",
        "services": [
          {
            "dataSource": "tnds",
            "destination": "HigH Green",
            "endDate": "2023-08-10",
            "id": 23127,
            "lineId": "SL1",
            "lineName": "1",
            "nocCode": "TEST",
            "operatorShortName": "First South Yorkshire",
            "origin": "Jordanthorpe",
            "serviceCode": "NW_04_SCMN_149_1",
            "startDate": "2023-07-23",
          },
        ],
        "vehicleMode": "bus",
      },
    ],
    "description": "Test description",
    "displayId": "8fg3ha",
    "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "disruptionReason": "staffInWrongPlace",
    "disruptionType": "planned",
    "history": [
      {
        "datetime": "2023-05-19T14:40:00Z",
        "historyItems": [
          "some text",
        ],
        "status": "PENDING_APPROVAL",
        "user": "user",
      },
      {
        "datetime": "2023-05-13T14:45:00Z",
        "historyItems": [
          "Disruption created and published",
        ],
        "status": "PUBLISHED",
        "user": "user",
      },
    ],
    "lastUpdated": "2023-05-11T14:40:00Z",
    "organisation": {
      "id": "6f6435e3-a485-4c8c-8c29-e121b1e76802",
      "name": "Test Org",
    },
    "publishStartDate": "10/03/2023",
    "publishStartTime": "1200",
    "summary": "Some summary",
    "validity": [
      {
        "disruptionEndDate": "17/03/2023",
        "disruptionEndTime": "1700",
        "disruptionStartDate": "10/03/2023",
        "disruptionStartTime": "1200",
      },
      {
        "disruptionStartDate": "18/03/2023",
        "disruptionStartTime": "1200",
      },
    ],
  },
]
`;

exports[`SIRI-SX Generator > correctly generates SIRI-SX XML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-08-17T00:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-08-17T00:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-05-13T14:45:00Z</CreationTime>
                    <ParticipantRef>TestOrg</ParticipantRef>
                    <SituationNumber>acde070d-8c4c-4f0d-9d8a-162843c10333</SituationNumber>
                    <Version>2</Version>
                    <Source>
                        <SourceType>feed</SourceType>
                        <TimeOfCommunication>2023-08-17T00:00:00.000Z</TimeOfCommunication>
                    </Source>
                    <VersionedAtTime>2023-05-11T14:40:00Z</VersionedAtTime>
                    <Progress>open</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                        <EndTime>2023-03-17T17:00:00.000Z</EndTime>
                    </ValidityPeriod>
                    <ValidityPeriod>
                        <StartTime>2023-03-18T12:00:00.000Z</StartTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                    </PublicationWindow>
                    <PersonnelReason>staffInWrongPlace</PersonnelReason>
                    <Planned>true</Planned>
                    <Summary>Some summary</Summary>
                    <Description>Test description</Description>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>severe</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>FSYO</OperatorRef>
                                        <OperatorName>Operator Name</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>true</JourneyPlanner>
                            </Blocking>
                            <Delays>
                                <Delay>PT40M</Delay>
                            </Delays>
                        </Consequence>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>slight</Severity>
                            <Affects>
                                <Operators>
                                    <AllOperators/>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>tram</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                                <Places>
                                    <AffectedPlace>
                                        <PlaceRef>082</PlaceRef>
                                        <PlaceName>Area 1</PlaceName>
                                        <PlaceCategory>AdministrativeArea</PlaceCategory>
                                    </AffectedPlace>
                                    <AffectedPlace>
                                        <PlaceRef>002</PlaceRef>
                                        <PlaceName>Area 2</PlaceName>
                                        <PlaceCategory>AdministrativeArea</PlaceCategory>
                                    </AffectedPlace>
                                </Places>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>false</JourneyPlanner>
                            </Blocking>
                        </Consequence>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>severe</Severity>
                            <Affects>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>rail</VehicleMode>
                                        <AffectedLine>
                                            <AffectedOperator>
                                                <OperatorRef>NOC</OperatorRef>
                                                <OperatorName>Test</OperatorName>
                                            </AffectedOperator>
                                            <LineRef>SL1</LineRef>
                                            <PublishedLineName>Line</PublishedLineName>
                                        </AffectedLine>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Service test</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>true</JourneyPlanner>
                            </Blocking>
                        </Consequence>
                        <Consequence>
                            <Condition>cancelled</Condition>
                            <Severity>unknown</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>TEST</OperatorRef>
                                        <OperatorName>First South Yorkshire</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AffectedLine>
                                            <LineRef>SL1</LineRef>
                                            <PublishedLineName>1</PublishedLineName>
                                        </AffectedLine>
                                    </AffectedNetwork>
                                </Networks>
                                <VehicleJourneys>
                                    <AffectedVehicleJourney>
                                        <VehicleJourneyRef>VJ24</VehicleJourneyRef>
                                        <Route/>
                                        <OriginAimedDepartureTime>2023-05-13T17:30:00.000Z</OriginAimedDepartureTime>
                                    </AffectedVehicleJourney>
                                    <AffectedVehicleJourney>
                                        <VehicleJourneyRef>VJ25</VehicleJourneyRef>
                                        <Route/>
                                        <OriginAimedDepartureTime>2023-05-13T18:00:00.000Z</OriginAimedDepartureTime>
                                    </AffectedVehicleJourney>
                                </VehicleJourneys>
                            </Affects>
                            <Advice>
                                <Details>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>false</JourneyPlanner>
                            </Blocking>
                            <Delays>
                                <Delay>PT45M</Delay>
                            </Delays>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;

exports[`SIRI-SX Generator > correctly generates SIRI-SX XML where creationDate is present 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-05-13T14:45:00Z</CreationTime>
                    <ParticipantRef>TestOrg</ParticipantRef>
                    <SituationNumber>acde070d-8c4c-4f0d-9d8a-162843c10333</SituationNumber>
                    <Version>1</Version>
                    <Source>
                        <SourceType>feed</SourceType>
                        <TimeOfCommunication>2023-08-17T00:00:00.000Z</TimeOfCommunication>
                    </Source>
                    <VersionedAtTime>2023-05-11T14:40:00Z</VersionedAtTime>
                    <Progress>open</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                        <EndTime>2023-03-17T17:00:00.000Z</EndTime>
                    </ValidityPeriod>
                    <ValidityPeriod>
                        <StartTime>2023-03-18T12:00:00.000Z</StartTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                    </PublicationWindow>
                    <PersonnelReason>staffInWrongPlace</PersonnelReason>
                    <Planned>true</Planned>
                    <Summary>Some summary</Summary>
                    <Description>Test description</Description>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>severe</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>FSYO</OperatorRef>
                                        <OperatorName>Operator Name</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>true</JourneyPlanner>
                            </Blocking>
                            <Delays>
                                <Delay>PT40M</Delay>
                            </Delays>
                        </Consequence>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>slight</Severity>
                            <Affects>
                                <Operators>
                                    <AllOperators/>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>tram</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                                <Places>
                                    <AffectedPlace>
                                        <PlaceRef>082</PlaceRef>
                                        <PlaceName>Area 1</PlaceName>
                                        <PlaceCategory>AdministrativeArea</PlaceCategory>
                                    </AffectedPlace>
                                    <AffectedPlace>
                                        <PlaceRef>002</PlaceRef>
                                        <PlaceName>Area 2</PlaceName>
                                        <PlaceCategory>AdministrativeArea</PlaceCategory>
                                    </AffectedPlace>
                                </Places>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>false</JourneyPlanner>
                            </Blocking>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;
